miLenguajeParser.py
# Generated from miLenguaje.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO



class miLenguajeParser ( Parser ):

    grammarFileName = "miLenguaje.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'programa'", "'funcion'", "'regresa'", 
                     "'muestra'", "'pregunta'", "'guarda'", "'en'", "'crea'", 
                     "'arreglo'", "'matriz'", "'si'", "'sino'", "'mientras'", 
                     "'para'", "'numero'", "'decimal'", "'texto'", "'logico'", 
                     "'+'", "'-'", "'\u00D7'", "'\u00F7'", "'^'", "'\u221A'", 
                     "'='", "'\u2260'", "'>'", "'<'", "'>='", "'<='", "'y'", 
                     "'o'", "'no'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'('", "')'", "'{'", "'}'", 
                     "'['", "']'", "';'", "','" ]

    symbolicNames = [ "<INVALID>", "PROGRAMA", "FUNCION", "REGRESA", "MUESTRA", 
                      "PREGUNTA", "GUARDA", "EN", "CREA", "ARREGLO", "MATRIZ", 
                      "SI", "SINO", "MIENTRAS", "PARA", "NUMERO", "DECIMAL", 
                      "TEXTO", "LOGICO", "SUMA", "RESTA", "MULTIPLICA", 
                      "DIVIDE", "POTENCIA", "RAIZ", "IGUAL", "NO_IGUAL", 
                      "MAYOR", "MENOR", "MAYOR_IGUAL", "MENOR_IGUAL", "Y", 
                      "O", "NO", "BOOLEANO", "NUMERO_VAL", "DECIMAL_VAL", 
                      "TEXTO_VAL", "IDENTIFICADOR", "LPAREN", "RPAREN", 
                      "LBRACE", "RBRACE", "LBRACKET", "RBRACKET", "PUNTO_COMA", 
                      "COMA", "WS", "COMENTARIO" ]

    RULE_programa = 0
    RULE_declaracion = 1
    RULE_declaracion_funcion = 2
    RULE_parametros = 3
    RULE_sentencia = 4
    RULE_declaracion_variable = 5
    RULE_asignacion = 6
    RULE_entrada = 7
    RULE_salida = 8
    RULE_regresar = 9
    RULE_condicional = 10
    RULE_condicional_si = 11
    RULE_condicional_sino = 12
    RULE_bucle = 13
    RULE_bucle_mientras = 14
    RULE_bucle_para = 15
    RULE_incremento = 16
    RULE_condicion = 17
    RULE_expresion = 18
    RULE_llamada_funcion = 19

    ruleNames =  [ "programa", "declaracion", "declaracion_funcion", "parametros", 
                   "sentencia", "declaracion_variable", "asignacion", "entrada", 
                   "salida", "regresar", "condicional", "condicional_si", 
                   "condicional_sino", "bucle", "bucle_mientras", "bucle_para", 
                   "incremento", "condicion", "expresion", "llamada_funcion" ]

    EOF = Token.EOF
    PROGRAMA=1
    FUNCION=2
    REGRESA=3
    MUESTRA=4
    PREGUNTA=5
    GUARDA=6
    EN=7
    CREA=8
    ARREGLO=9
    MATRIZ=10
    SI=11
    SINO=12
    MIENTRAS=13
    PARA=14
    NUMERO=15
    DECIMAL=16
    TEXTO=17
    LOGICO=18
    SUMA=19
    RESTA=20
    MULTIPLICA=21
    DIVIDE=22
    POTENCIA=23
    RAIZ=24
    IGUAL=25
    NO_IGUAL=26
    MAYOR=27
    MENOR=28
    MAYOR_IGUAL=29
    MENOR_IGUAL=30
    Y=31
    O=32
    NO=33
    BOOLEANO=34
    NUMERO_VAL=35
    DECIMAL_VAL=36
    TEXTO_VAL=37
    IDENTIFICADOR=38
    LPAREN=39
    RPAREN=40
    LBRACE=41
    RBRACE=42
    LBRACKET=43
    RBRACKET=44
    PUNTO_COMA=45
    COMA=46
    WS=47
    COMENTARIO=48

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgramaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PROGRAMA(self):
            return self.getToken(miLenguajeParser.PROGRAMA, 0)

        def LBRACE(self):
            return self.getToken(miLenguajeParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(miLenguajeParser.RBRACE, 0)

        def EOF(self):
            return self.getToken(miLenguajeParser.EOF, 0)

        def declaracion(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(miLenguajeParser.DeclaracionContext)
            else:
                return self.getTypedRuleContext(miLenguajeParser.DeclaracionContext,i)


        def sentencia(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(miLenguajeParser.SentenciaContext)
            else:
                return self.getTypedRuleContext(miLenguajeParser.SentenciaContext,i)


        def getRuleIndex(self):
            return miLenguajeParser.RULE_programa

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrograma" ):
                listener.enterPrograma(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrograma" ):
                listener.exitPrograma(self)




    def programa(self):

        localctx = miLenguajeParser.ProgramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_programa)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 40
            self.match(miLenguajeParser.PROGRAMA)
            self.state = 41
            self.match(miLenguajeParser.LBRACE)
            self.state = 45
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,0,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 42
                    self.declaracion() 
                self.state = 47
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,0,self._ctx)

            self.state = 51
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << miLenguajeParser.REGRESA) | (1 << miLenguajeParser.MUESTRA) | (1 << miLenguajeParser.PREGUNTA) | (1 << miLenguajeParser.CREA) | (1 << miLenguajeParser.SI) | (1 << miLenguajeParser.MIENTRAS) | (1 << miLenguajeParser.PARA) | (1 << miLenguajeParser.IDENTIFICADOR))) != 0):
                self.state = 48
                self.sentencia()
                self.state = 53
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 54
            self.match(miLenguajeParser.RBRACE)
            self.state = 55
            self.match(miLenguajeParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DeclaracionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaracion_funcion(self):
            return self.getTypedRuleContext(miLenguajeParser.Declaracion_funcionContext,0)


        def declaracion_variable(self):
            return self.getTypedRuleContext(miLenguajeParser.Declaracion_variableContext,0)


        def getRuleIndex(self):
            return miLenguajeParser.RULE_declaracion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracion" ):
                listener.enterDeclaracion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracion" ):
                listener.exitDeclaracion(self)




    def declaracion(self):

        localctx = miLenguajeParser.DeclaracionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declaracion)
        try:
            self.state = 59
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [miLenguajeParser.FUNCION]:
                self.enterOuterAlt(localctx, 1)
                self.state = 57
                self.declaracion_funcion()
                pass
            elif token in [miLenguajeParser.CREA]:
                self.enterOuterAlt(localctx, 2)
                self.state = 58
                self.declaracion_variable()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Declaracion_funcionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCION(self):
            return self.getToken(miLenguajeParser.FUNCION, 0)

        def IDENTIFICADOR(self):
            return self.getToken(miLenguajeParser.IDENTIFICADOR, 0)

        def LPAREN(self):
            return self.getToken(miLenguajeParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(miLenguajeParser.RPAREN, 0)

        def LBRACE(self):
            return self.getToken(miLenguajeParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(miLenguajeParser.RBRACE, 0)

        def parametros(self):
            return self.getTypedRuleContext(miLenguajeParser.ParametrosContext,0)


        def sentencia(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(miLenguajeParser.SentenciaContext)
            else:
                return self.getTypedRuleContext(miLenguajeParser.SentenciaContext,i)


        def regresar(self):
            return self.getTypedRuleContext(miLenguajeParser.RegresarContext,0)


        def getRuleIndex(self):
            return miLenguajeParser.RULE_declaracion_funcion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracion_funcion" ):
                listener.enterDeclaracion_funcion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracion_funcion" ):
                listener.exitDeclaracion_funcion(self)




    def declaracion_funcion(self):

        localctx = miLenguajeParser.Declaracion_funcionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_declaracion_funcion)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 61
            self.match(miLenguajeParser.FUNCION)
            self.state = 62
            self.match(miLenguajeParser.IDENTIFICADOR)
            self.state = 63
            self.match(miLenguajeParser.LPAREN)
            self.state = 65
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << miLenguajeParser.NUMERO) | (1 << miLenguajeParser.DECIMAL) | (1 << miLenguajeParser.TEXTO) | (1 << miLenguajeParser.LOGICO))) != 0):
                self.state = 64
                self.parametros()


            self.state = 67
            self.match(miLenguajeParser.RPAREN)
            self.state = 68
            self.match(miLenguajeParser.LBRACE)
            self.state = 72
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 69
                    self.sentencia() 
                self.state = 74
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

            self.state = 76
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==miLenguajeParser.REGRESA:
                self.state = 75
                self.regresar()


            self.state = 78
            self.match(miLenguajeParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ParametrosContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFICADOR(self, i:int=None):
            if i is None:
                return self.getTokens(miLenguajeParser.IDENTIFICADOR)
            else:
                return self.getToken(miLenguajeParser.IDENTIFICADOR, i)

        def NUMERO(self, i:int=None):
            if i is None:
                return self.getTokens(miLenguajeParser.NUMERO)
            else:
                return self.getToken(miLenguajeParser.NUMERO, i)

        def DECIMAL(self, i:int=None):
            if i is None:
                return self.getTokens(miLenguajeParser.DECIMAL)
            else:
                return self.getToken(miLenguajeParser.DECIMAL, i)

        def TEXTO(self, i:int=None):
            if i is None:
                return self.getTokens(miLenguajeParser.TEXTO)
            else:
                return self.getToken(miLenguajeParser.TEXTO, i)

        def LOGICO(self, i:int=None):
            if i is None:
                return self.getTokens(miLenguajeParser.LOGICO)
            else:
                return self.getToken(miLenguajeParser.LOGICO, i)

        def COMA(self, i:int=None):
            if i is None:
                return self.getTokens(miLenguajeParser.COMA)
            else:
                return self.getToken(miLenguajeParser.COMA, i)

        def getRuleIndex(self):
            return miLenguajeParser.RULE_parametros

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParametros" ):
                listener.enterParametros(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParametros" ):
                listener.exitParametros(self)




    def parametros(self):

        localctx = miLenguajeParser.ParametrosContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_parametros)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << miLenguajeParser.NUMERO) | (1 << miLenguajeParser.DECIMAL) | (1 << miLenguajeParser.TEXTO) | (1 << miLenguajeParser.LOGICO))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 81
            self.match(miLenguajeParser.IDENTIFICADOR)
            self.state = 87
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==miLenguajeParser.COMA:
                self.state = 82
                self.match(miLenguajeParser.COMA)
                self.state = 83
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << miLenguajeParser.NUMERO) | (1 << miLenguajeParser.DECIMAL) | (1 << miLenguajeParser.TEXTO) | (1 << miLenguajeParser.LOGICO))) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 84
                self.match(miLenguajeParser.IDENTIFICADOR)
                self.state = 89
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SentenciaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaracion_variable(self):
            return self.getTypedRuleContext(miLenguajeParser.Declaracion_variableContext,0)


        def asignacion(self):
            return self.getTypedRuleContext(miLenguajeParser.AsignacionContext,0)


        def entrada(self):
            return self.getTypedRuleContext(miLenguajeParser.EntradaContext,0)


        def salida(self):
            return self.getTypedRuleContext(miLenguajeParser.SalidaContext,0)


        def condicional(self):
            return self.getTypedRuleContext(miLenguajeParser.CondicionalContext,0)


        def bucle(self):
            return self.getTypedRuleContext(miLenguajeParser.BucleContext,0)


        def llamada_funcion(self):
            return self.getTypedRuleContext(miLenguajeParser.Llamada_funcionContext,0)


        def regresar(self):
            return self.getTypedRuleContext(miLenguajeParser.RegresarContext,0)


        def getRuleIndex(self):
            return miLenguajeParser.RULE_sentencia

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSentencia" ):
                listener.enterSentencia(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSentencia" ):
                listener.exitSentencia(self)




    def sentencia(self):

        localctx = miLenguajeParser.SentenciaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_sentencia)
        try:
            self.state = 98
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 90
                self.declaracion_variable()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 91
                self.asignacion()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 92
                self.entrada()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 93
                self.salida()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 94
                self.condicional()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 95
                self.bucle()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 96
                self.llamada_funcion()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 97
                self.regresar()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Declaracion_variableContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CREA(self):
            return self.getToken(miLenguajeParser.CREA, 0)

        def IDENTIFICADOR(self):
            return self.getToken(miLenguajeParser.IDENTIFICADOR, 0)

        def PUNTO_COMA(self):
            return self.getToken(miLenguajeParser.PUNTO_COMA, 0)

        def NUMERO(self):
            return self.getToken(miLenguajeParser.NUMERO, 0)

        def DECIMAL(self):
            return self.getToken(miLenguajeParser.DECIMAL, 0)

        def TEXTO(self):
            return self.getToken(miLenguajeParser.TEXTO, 0)

        def LOGICO(self):
            return self.getToken(miLenguajeParser.LOGICO, 0)

        def IGUAL(self):
            return self.getToken(miLenguajeParser.IGUAL, 0)

        def expresion(self):
            return self.getTypedRuleContext(miLenguajeParser.ExpresionContext,0)


        def ARREGLO(self):
            return self.getToken(miLenguajeParser.ARREGLO, 0)

        def MATRIZ(self):
            return self.getToken(miLenguajeParser.MATRIZ, 0)

        def getRuleIndex(self):
            return miLenguajeParser.RULE_declaracion_variable

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracion_variable" ):
                listener.enterDeclaracion_variable(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracion_variable" ):
                listener.exitDeclaracion_variable(self)




    def declaracion_variable(self):

        localctx = miLenguajeParser.Declaracion_variableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_declaracion_variable)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.match(miLenguajeParser.CREA)
            self.state = 102
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==miLenguajeParser.ARREGLO or _la==miLenguajeParser.MATRIZ:
                self.state = 101
                _la = self._input.LA(1)
                if not(_la==miLenguajeParser.ARREGLO or _la==miLenguajeParser.MATRIZ):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()


            self.state = 104
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << miLenguajeParser.NUMERO) | (1 << miLenguajeParser.DECIMAL) | (1 << miLenguajeParser.TEXTO) | (1 << miLenguajeParser.LOGICO))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 105
            self.match(miLenguajeParser.IDENTIFICADOR)
            self.state = 108
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==miLenguajeParser.IGUAL:
                self.state = 106
                self.match(miLenguajeParser.IGUAL)
                self.state = 107
                self.expresion(0)


            self.state = 110
            self.match(miLenguajeParser.PUNTO_COMA)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AsignacionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFICADOR(self):
            return self.getToken(miLenguajeParser.IDENTIFICADOR, 0)

        def IGUAL(self):
            return self.getToken(miLenguajeParser.IGUAL, 0)

        def expresion(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(miLenguajeParser.ExpresionContext)
            else:
                return self.getTypedRuleContext(miLenguajeParser.ExpresionContext,i)


        def PUNTO_COMA(self):
            return self.getToken(miLenguajeParser.PUNTO_COMA, 0)

        def LBRACKET(self, i:int=None):
            if i is None:
                return self.getTokens(miLenguajeParser.LBRACKET)
            else:
                return self.getToken(miLenguajeParser.LBRACKET, i)

        def RBRACKET(self, i:int=None):
            if i is None:
                return self.getTokens(miLenguajeParser.RBRACKET)
            else:
                return self.getToken(miLenguajeParser.RBRACKET, i)

        def getRuleIndex(self):
            return miLenguajeParser.RULE_asignacion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAsignacion" ):
                listener.enterAsignacion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAsignacion" ):
                listener.exitAsignacion(self)




    def asignacion(self):

        localctx = miLenguajeParser.AsignacionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_asignacion)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self.match(miLenguajeParser.IDENTIFICADOR)
            self.state = 119
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==miLenguajeParser.LBRACKET:
                self.state = 113
                self.match(miLenguajeParser.LBRACKET)
                self.state = 114
                self.expresion(0)
                self.state = 115
                self.match(miLenguajeParser.RBRACKET)
                self.state = 121
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 122
            self.match(miLenguajeParser.IGUAL)
            self.state = 123
            self.expresion(0)
            self.state = 124
            self.match(miLenguajeParser.PUNTO_COMA)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class EntradaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PREGUNTA(self):
            return self.getToken(miLenguajeParser.PREGUNTA, 0)

        def TEXTO_VAL(self):
            return self.getToken(miLenguajeParser.TEXTO_VAL, 0)

        def GUARDA(self):
            return self.getToken(miLenguajeParser.GUARDA, 0)

        def EN(self):
            return self.getToken(miLenguajeParser.EN, 0)

        def IDENTIFICADOR(self):
            return self.getToken(miLenguajeParser.IDENTIFICADOR, 0)

        def PUNTO_COMA(self):
            return self.getToken(miLenguajeParser.PUNTO_COMA, 0)

        def NUMERO(self):
            return self.getToken(miLenguajeParser.NUMERO, 0)

        def DECIMAL(self):
            return self.getToken(miLenguajeParser.DECIMAL, 0)

        def TEXTO(self):
            return self.getToken(miLenguajeParser.TEXTO, 0)

        def BOOLEANO(self):
            return self.getToken(miLenguajeParser.BOOLEANO, 0)

        def getRuleIndex(self):
            return miLenguajeParser.RULE_entrada

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEntrada" ):
                listener.enterEntrada(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEntrada" ):
                listener.exitEntrada(self)




    def entrada(self):

        localctx = miLenguajeParser.EntradaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_entrada)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126
            self.match(miLenguajeParser.PREGUNTA)
            self.state = 127
            self.match(miLenguajeParser.TEXTO_VAL)
            self.state = 128
            self.match(miLenguajeParser.GUARDA)
            self.state = 129
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << miLenguajeParser.NUMERO) | (1 << miLenguajeParser.DECIMAL) | (1 << miLenguajeParser.TEXTO) | (1 << miLenguajeParser.BOOLEANO))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 130
            self.match(miLenguajeParser.EN)
            self.state = 131
            self.match(miLenguajeParser.IDENTIFICADOR)
            self.state = 132
            self.match(miLenguajeParser.PUNTO_COMA)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SalidaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MUESTRA(self):
            return self.getToken(miLenguajeParser.MUESTRA, 0)

        def expresion(self):
            return self.getTypedRuleContext(miLenguajeParser.ExpresionContext,0)


        def PUNTO_COMA(self):
            return self.getToken(miLenguajeParser.PUNTO_COMA, 0)

        def getRuleIndex(self):
            return miLenguajeParser.RULE_salida

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSalida" ):
                listener.enterSalida(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSalida" ):
                listener.exitSalida(self)




    def salida(self):

        localctx = miLenguajeParser.SalidaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_salida)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 134
            self.match(miLenguajeParser.MUESTRA)
            self.state = 135
            self.expresion(0)
            self.state = 136
            self.match(miLenguajeParser.PUNTO_COMA)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx
